--- a/transition-activity/activity.css
+++ b/transition-activity/activity.css
@@ -1,1 +1,9 @@
+button{
+    background-color: ghostwhite;
+}
 
+button:hover{
+    background-color: cornflowerblue;
+    color: white;
+    transition-duration: 2s;
+}
